# SagerNet

./: .gitignore  .gitmodules  AUTHORS  LICENSE  README  README.md  build.gradle  build.gradle.kts  config.yml  gradle.properties  lint.xml  release.keystore  repositories.gradle.kts  run  sager.properties  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_zh_CN.md
.github/workflows/: debug.yml  debug_apk.yml  release.yml  release_brook.yml  release_dnstt.yml  release_hysteria.yml  release_mieru.yml  release_naive.yml  release_pingtunnel.yml  release_relaybaton.yml  release_trojan_go.yml  release_tuic.yml  release_wireguard.yml  release_xtls.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/schemas/io.nekohasekai.sagernet.database.SagerDatabase/: 1.json  10.json  11.json  12.json  14.json  15.json  16.json  17.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: LICENSE  open_source_licenses.html  terminal.properties
app/src/main/jni/: Android.mk
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Helpers.kt  RootCAAsserts.kt  V2RayAssets.kt
colorpicker/: build.gradle
core/: build.gradle
core/src/main/: AndroidManifest.xml
flexbox/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
metadata/: description.txt
metadata/en-US/: description.txt  summary.txt
naive-plugin/: build.gradle
naive-plugin/src/main/: AndroidManifest.xml
naive-plugin/src/main/jni/: BUILD.gn
plugin/: build.gradle
plugin/api/: build.gradle.kts
plugin/api/src/main/: AndroidManifest.xml
plugin/brook/: build.gradle.kts
plugin/dnstt/: build.gradle.kts
plugin/hysteria/: build.gradle.kts
plugin/mieru/: build.gradle.kts
plugin/naive/: build.gradle.kts
plugin/ovpn/: build.gradle.kts
plugin/ovpn/src/main/cpp/: CMakeLists.txt  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  lz4.cmake  lzo.cmake  tools.cmake
plugin/ovpn/src/main/cpp/jbcrypto/: jbcrypto.cpp
plugin/ovpn/src/main/cpp/lzo/: Android.mk  CMakeLists.txt  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.hin  configure  configure.ac  lzo2.pc.cmakein  lzo2.pc.in
plugin/ovpn/src/main/cpp/lzo/B/: 00README.TXT  clean.bat  done.bat  prepare.bat  src.rsp  unset.bat
plugin/ovpn/src/main/cpp/lzo/B/dos32/: bc_pp.bat  dj2.bat  dj2.opt  dm.bat  emx.bat  highc.bat  highc.rsp  ndp.bat  ndp.rsp  sc.bat  wc.bat  zc.bat
plugin/ovpn/src/main/cpp/lzo/B/generic/: Makefile  build.sh  build_freestanding.sh  build_gcc.sh  clean.sh
plugin/ovpn/src/main/cpp/lzo/B/os2/: emx.bat  wc.bat  zc.bat
plugin/ovpn/src/main/cpp/lzo/B/win32/: bc.bat  bc.rsp  cygwin.bat  cygwin.rsp  dm.bat  ic.bat  lccwin32.bat  mingw.bat  mwerks.bat  pellesc.bat  pgi.bat  pw32.bat  rsxnt.bat  sc.bat  vc.bat  vc.rsp  vc_dll.bat  vc_dll.def  wc.bat  wc.rsp
plugin/ovpn/src/main/cpp/lzo/B/win64/: ic.bat  ic_dll.bat  vc.bat  vc.rsp  vc_dll.bat
plugin/ovpn/src/main/cpp/lzo/asm/i386/src/: enter.ash  leave.ash  lzo1c_d.ash  lzo1c_s1.S  lzo1f_d.ash  lzo1f_f1.S  lzo1x_d.ash  lzo1x_f1.S  lzo1x_s1.S  lzo1y_f1.S  lzo1y_s1.S  lzo_asm.h
plugin/ovpn/src/main/cpp/lzo/asm/i386/src_gas/: asminit.def  lzo1c_s1.S  lzo1f_f1.S  lzo1x_f1.S  lzo1x_s1.S  lzo1y_f1.S  lzo1y_s1.S
plugin/ovpn/src/main/cpp/lzo/asm/i386/src_gas/all/: asm_all.S
plugin/ovpn/src/main/cpp/lzo/asm/i386/src_masm/: asminit.def  lzo1c_s1.asm  lzo1f_f1.asm  lzo1x_f1.asm  lzo1x_s1.asm  lzo1y_f1.asm  lzo1y_s1.asm
plugin/ovpn/src/main/cpp/lzo/asm/i386/src_masm/all/: asm_all.asm
plugin/ovpn/src/main/cpp/lzo/asm/i386/src_nasm/: asminit.def  lzo1c_s1.asm  lzo1f_f1.asm  lzo1x_f1.asm  lzo1x_s1.asm  lzo1y_f1.asm  lzo1y_s1.asm
plugin/ovpn/src/main/cpp/lzo/asm/i386/src_nasm/all/: asm_all.asm
plugin/ovpn/src/main/cpp/lzo/autoconf/: local.m4  ylwrap
plugin/ovpn/src/main/cpp/lzo/doc/: LZO.TXT
plugin/ovpn/src/main/cpp/lzo/examples/: dict.c  lzopack.c  overlap.c  portab.h  portab_a.h  precomp.c  precomp2.c  simple.c
plugin/ovpn/src/main/cpp/lzo/lzotest/: asm.h  db.h  lzotest.c  wrap.h  wrapmisc.h
plugin/ovpn/src/main/cpp/lzo/src/: compr1b.h  compr1c.h  config1.h  config1a.h  config1b.h  config1c.h  config1f.h  config1x.h  config1y.h  config1z.h  config2a.h  lzo1.c  lzo1_99.c  lzo1_cm.ch  lzo1_d.ch  lzo1a.c  lzo1a_99.c  lzo1a_cm.ch  lzo1a_cr.ch  lzo1a_de.h  lzo1b_1.c  lzo1b_2.c  lzo1b_3.c  lzo1b_4.c  lzo1b_5.c  lzo1b_6.c  lzo1b_7.c  lzo1b_8.c  lzo1b_9.c  lzo1b_99.c  lzo1b_9x.c  lzo1b_c.ch  lzo1b_cc.c  lzo1b_cc.h  lzo1b_cm.ch  lzo1b_cr.ch  lzo1b_d.ch  lzo1b_d1.c  lzo1b_d2.c  lzo1b_de.h  (+69 more)
plugin/ovpn/src/main/cpp/lzo/tests/: align.c  chksum.c  promote.c  sizes.c
plugin/ovpn/src/main/cpp/lzo/util/: check.sh  checkasm.sh  notime.pl  overlap.sh  shortf.pl  table.pl  uncompr.pl
plugin/ovpn/src/main/cpp/openvpn-config/: config.h  openvpn-plugin.h
plugin/ovpn/src/main/cpp/opvpnutil/: jniglue.c  jniglue.h  scan_ifs.c  sslspeed.c
plugin/pingtunnel/: build.gradle.kts
plugin/relaybaton/: build.gradle.kts
plugin/src/main/: AndroidManifest.xml
plugin/trojan/: build.gradle.kts
plugin/trojan-go/: build.gradle.kts
plugin/trojan/src/main/cpp/: CMakeLists.txt
plugin/tuic/: build.gradle.kts
plugin/wireguard/: build.gradle.kts
plugin/xtls/: build.gradle.kts
preferencex/: build.gradle
preferencex-colorpicker/: build.gradle
preferencex-colorpicker/src/main/: AndroidManifest.xml
preferencex-ringtone/: build.gradle
preferencex-simplemenu/: build.gradle
preferencex/src/main/: AndroidManifest.xml
pt-plugin/: build.gradle
pt-plugin/src/main/: AndroidManifest.xml
rb-plugin/: build.gradle
rb-plugin/src/main/: AndroidManifest.xml
shadowsocks/: build.gradle.kts
shadowsocksr/: build.gradle
shadowsocksr/src/main/: AndroidManifest.xml
trojan-go-plugin/: build.gradle
trojan-go-plugin/src/main/: AndroidManifest.xml
xray-plugin/: build.gradle
xray-plugin/src/main/: AndroidManifest.xml
xtls-plugin/: build.gradle  proguard-rules.pro
xtls-plugin/src/main/: AndroidManifest.xml
(+676 files in other folders)
